package appli.controleur;

import javafx.fxml.FXML;

public class ControleurPage {
    @FXML
    public void sortir() {
        System.exit(0);
    }

}
