package appli.controleur;

public class Observateur {
    public void reagir(){}
}
