@startuml
abstract class file.Fichier{
    + isImage()
    + isAudio()
    + isVideo()
}

class file.Image{
}

class file.Audio{
}

class file.Video{
}

file.Image --|> file.Fichier
file.Audio --|> file.Fichier
file.Video --|> file.Fichier

class carnet.Page{
    - Date date
    - String Titre
    - String texte
    + ajouter(Fichier f)
    + ajouterText(String s)
    + ajouterTitre(String s)
    + getTitre()
    + getText()
    + getFichier()
}

class carnet.Carnet{
    - String titreVoyage
    + ajouter(Page p)
    + getCarnet()
}
class carnet.SujetObserve{
    - ArrayList<Observateur> observateurs
    + void ajouterObservateur(Observateur)
    + void notifierObservateur()
    - getObservateurs()
}


carnet.Page -- "*"carnet.Carnet

carnet.SujetObserve <|-- carnet.Carnet

carnet.Page  -- "0..7"file.Fichier


controleur.Observateur "*" -- carnet.SujetObserve
controleur.ControleurPage ..|> controleur.Observateur
controleur.ControleurFirstPage ..|> controleur.Observateur
controleur.ControleurMenu ..|> controleur.Observateur
controleur.ControleurVignettes ..|> controleur.Observateur
controleur.ControleurModifPage ..|> controleur.Observateur


class controleur.ControleurFirstPage{
    - Button sortie
    - Button menu
}

class controleur.ControleurMenu{
    - Button sortie
    - Button newPage
    - Button visu
    - Button Modif
}

class controleur.ControleurModifPage{
    - Button sortie
    - Button addRes1
    - Button addRes2
    - Button addRes3
    - Button addRes4
    - Button addRes5
    - Button addRes6
    - Button addRes7
    - TextField Titre
    - TextField text
}

class controleur.ControleurVignettes{
    - Button sortie
    - Button toPage
    - ArrayList<Button> vignettePages
}

class controleur.ControleurPage{
    - Label titre
    - Label texte
    - ImageView Res1
    - ImageView Res2
    - ImageView Res3
    - ImageView Res4
    - ImageView Res5
    - ImageView Res6
    - ImageView Res7
    - Button sortie
    - Button toVignette
}

interface controleur.Observateur{
    + void reagir()
}


@enduml